Alignment issue fixed in home page

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/components/_seastion-sec.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/components/_seastion-sec.scss
@@ -45,11 +45,16 @@
 				text-decoration: none;
 				padding-bottom: 2px;
 				margin-top: 5px;
-				display: inline-block;
-				border-bottom: 2px solid $gray-darker;
-				&:hover {
-					border-bottom-color: transparent;
-				}
+				display: inline-block;                
+				
+                &.link{
+                    border-bottom: 2px solid $gray-darker;
+                    
+                    &:hover {
+                        border-bottom-color: transparent;
+                    } 
+                }
+				
 			}
 			p {
 				display: none;
